# simple-ml-manager

./: README.md  main.py  pyproject.toml
src/: ml_manager.py
tests/: test_ml_manager.py
